PPL3/initial/target/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'!'", "'!='", "'==.'", "'-'", "'&&'", "'>'", 
                     "'+.'", "'*'", "'||'", "'<='", "'.'", "'/'", "'=='", 
                     "'<'", "'%'", "'='", "'>='", "'('", "')'", "'{'", "'}'", 
                     "';'", "','", "'['", "']'", "':'", "'::'", "'$'", "'..'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "FOREACH", "INT", "NULL", "CONSTRUCTOR", 
                      "CONTINUE", "TRUE", "FLOAT", "CLASS", "DESTRUCTOR", 
                      "IF", "FALSE", "BOOLEAN", "VAL", "NEW", "ELSEIF", 
                      "ARRAY", "STRING", "VAR", "BY", "ELSE", "IN", "RETURN", 
                      "SELF", "BLOCK_COMM", "ID", "ID_STATIC", "PLUS", "EXCL", 
                      "DIF", "EQUA_DOT", "MINUS", "AND", "MOREE", "PLUS_DOT", 
                      "MUL", "OR", "LESS_EQUA", "DOT", "DIV", "EQUA", "LESS", 
                      "PERCENT", "ASS", "MORE_EQUA", "LB", "RB", "LP", "RP", 
                      "SEMI", "COMMA", "LS", "RS", "COLON", "DCOLON", "DOLLAR", 
                      "DDOT", "LIT_INT", "LIT_FLOAT", "LIT_STRING", "WS", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_list_class = 1
    RULE_class_decl = 2
    RULE_class_block = 3
    RULE_list_class_mem = 4
    RULE_class_mem_decl = 5
    RULE_class_attr_decl = 6
    RULE_attr1 = 7
    RULE_attr2 = 8
    RULE_list_id = 9
    RULE_list_expr = 10
    RULE_literal = 11
    RULE_mptype = 12
    RULE_class_type = 13
    RULE_primitive_type = 14
    RULE_array_type = 15
    RULE_array_characteristic = 16
    RULE_array_element_type = 17
    RULE_array_size = 18
    RULE_class_method_decl = 19
    RULE_static_method = 20
    RULE_instance_method = 21
    RULE_constructor_method = 22
    RULE_destructor_method = 23
    RULE_list_para = 24
    RULE_notnull_list_para = 25
    RULE_para = 26
    RULE_stat = 27
    RULE_stat_var_con = 28
    RULE_stat_var_con1 = 29
    RULE_stat_var_con2 = 30
    RULE_list_id_ins = 31
    RULE_stat_assign = 32
    RULE_stat_assign_lhs = 33
    RULE_stat_if = 34
    RULE_part_if = 35
    RULE_list_else = 36
    RULE_elseif = 37
    RULE_part_else = 38
    RULE_stat_foreach = 39
    RULE_by_expr = 40
    RULE_stat_break = 41
    RULE_stat_continue = 42
    RULE_stat_return = 43
    RULE_stat_method_sta = 44
    RULE_stat_method_ins = 45
    RULE_stat_block = 46
    RULE_block_body = 47
    RULE_list_stat = 48
    RULE_expr = 49
    RULE_expr1 = 50
    RULE_expr2 = 51
    RULE_expr3 = 52
    RULE_expr4 = 53
    RULE_expr5 = 54
    RULE_expr6 = 55
    RULE_expr7 = 56
    RULE_expr8 = 57
    RULE_expr9 = 58
    RULE_expr10 = 59
    RULE_expr11 = 60
    RULE_factor = 61
    RULE_lit = 62
    RULE_op_string = 63
    RULE_op_rel = 64
    RULE_op_log2 = 65
    RULE_op_add = 66
    RULE_op_mul = 67
    RULE_op_log1 = 68
    RULE_op_obj = 69
    RULE_mpid = 70
    RULE_lit_boolean = 71
    RULE_lit_indexed_arr = 72
    RULE_lit_mul_arr = 73
    RULE_mul_arr_elements = 74
    RULE_mul_arr_element = 75

    ruleNames =  [ "program", "list_class", "class_decl", "class_block", 
                   "list_class_mem", "class_mem_decl", "class_attr_decl", 
                   "attr1", "attr2", "list_id", "list_expr", "literal", 
                   "mptype", "class_type", "primitive_type", "array_type", 
                   "array_characteristic", "array_element_type", "array_size", 
                   "class_method_decl", "static_method", "instance_method", 
                   "constructor_method", "destructor_method", "list_para", 
                   "notnull_list_para", "para", "stat", "stat_var_con", 
                   "stat_var_con1", "stat_var_con2", "list_id_ins", "stat_assign", 
                   "stat_assign_lhs", "stat_if", "part_if", "list_else", 
                   "elseif", "part_else", "stat_foreach", "by_expr", "stat_break", 
                   "stat_continue", "stat_return", "stat_method_sta", "stat_method_ins", 
                   "stat_block", "block_body", "list_stat", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "expr8", "expr9", "expr10", "expr11", "factor", "lit", 
                   "op_string", "op_rel", "op_log2", "op_add", "op_mul", 
                   "op_log1", "op_obj", "mpid", "lit_boolean", "lit_indexed_arr", 
                   "lit_mul_arr", "mul_arr_elements", "mul_arr_element" ]

    EOF = Token.EOF
    BREAK=1
    FOREACH=2
    INT=3
    NULL=4
    CONSTRUCTOR=5
    CONTINUE=6
    TRUE=7
    FLOAT=8
    CLASS=9
    DESTRUCTOR=10
    IF=11
    FALSE=12
    BOOLEAN=13
    VAL=14
    NEW=15
    ELSEIF=16
    ARRAY=17
    STRING=18
    VAR=19
    BY=20
    ELSE=21
    IN=22
    RETURN=23
    SELF=24
    BLOCK_COMM=25
    ID=26
    ID_STATIC=27
    PLUS=28
    EXCL=29
    DIF=30
    EQUA_DOT=31
    MINUS=32
    AND=33
    MOREE=34
    PLUS_DOT=35
    MUL=36
    OR=37
    LESS_EQUA=38
    DOT=39
    DIV=40
    EQUA=41
    LESS=42
    PERCENT=43
    ASS=44
    MORE_EQUA=45
    LB=46
    RB=47
    LP=48
    RP=49
    SEMI=50
    COMMA=51
    LS=52
    RS=53
    COLON=54
    DCOLON=55
    DOLLAR=56
    DDOT=57
    LIT_INT=58
    LIT_FLOAT=59
    LIT_STRING=60
    WS=61
    ILLEGAL_ESCAPE=62
    UNCLOSE_STRING=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_class(self):
            return self.getTypedRuleContext(D96Parser.List_classContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.list_class()
            self.state = 153
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self):
            return self.getTypedRuleContext(D96Parser.Class_declContext,0)


        def list_class(self):
            return self.getTypedRuleContext(D96Parser.List_classContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_list_class

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_class" ):
                return visitor.visitList_class(self)
            else:
                return visitor.visitChildren(self)




    def list_class(self):

        localctx = D96Parser.List_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_class)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.class_decl()
                self.state = 156
                self.list_class()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.class_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def class_block(self):
            return self.getTypedRuleContext(D96Parser.Class_blockContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.match(D96Parser.CLASS)
                self.state = 162
                self.match(D96Parser.ID)
                self.state = 163
                self.match(D96Parser.LP)
                self.state = 164
                self.class_block()
                self.state = 165
                self.match(D96Parser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(D96Parser.CLASS)
                self.state = 168
                self.match(D96Parser.ID)
                self.state = 169
                self.match(D96Parser.COLON)
                self.state = 170
                self.match(D96Parser.ID)
                self.state = 171
                self.match(D96Parser.LP)
                self.state = 172
                self.class_block()
                self.state = 173
                self.match(D96Parser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_class_mem(self):
            return self.getTypedRuleContext(D96Parser.List_class_memContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_block" ):
                return visitor.visitClass_block(self)
            else:
                return visitor.visitChildren(self)




    def class_block(self):

        localctx = D96Parser.Class_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_block)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.VAL, D96Parser.VAR, D96Parser.ID, D96Parser.ID_STATIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.list_class_mem()
                pass
            elif token in [D96Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_class_memContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_mem_decl(self):
            return self.getTypedRuleContext(D96Parser.Class_mem_declContext,0)


        def list_class_mem(self):
            return self.getTypedRuleContext(D96Parser.List_class_memContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_list_class_mem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_class_mem" ):
                return visitor.visitList_class_mem(self)
            else:
                return visitor.visitChildren(self)




    def list_class_mem(self):

        localctx = D96Parser.List_class_memContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_class_mem)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.class_mem_decl()
                self.state = 182
                self.list_class_mem()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.class_mem_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_mem_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_attr_decl(self):
            return self.getTypedRuleContext(D96Parser.Class_attr_declContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def class_method_decl(self):
            return self.getTypedRuleContext(D96Parser.Class_method_declContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_mem_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_mem_decl" ):
                return visitor.visitClass_mem_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_mem_decl(self):

        localctx = D96Parser.Class_mem_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_mem_decl)
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.class_attr_decl()
                self.state = 188
                self.match(D96Parser.SEMI)
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.ID_STATIC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.class_method_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_attr_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def attr1(self):
            return self.getTypedRuleContext(D96Parser.Attr1Context,0)


        def attr2(self):
            return self.getTypedRuleContext(D96Parser.Attr2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_attr_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_attr_decl" ):
                return visitor.visitClass_attr_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_attr_decl(self):

        localctx = D96Parser.Class_attr_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_attr_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 194
                self.attr1()
                pass

            elif la_ == 2:
                self.state = 195
                self.attr2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_id(self):
            return self.getTypedRuleContext(D96Parser.List_idContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(D96Parser.MptypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr1" ):
                return visitor.visitAttr1(self)
            else:
                return visitor.visitChildren(self)




    def attr1(self):

        localctx = D96Parser.Attr1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attr1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.list_id()
            self.state = 199
            self.match(D96Parser.COLON)
            self.state = 200
            self.mptype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mpid(self):
            return self.getTypedRuleContext(D96Parser.MpidContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def attr2(self):
            return self.getTypedRuleContext(D96Parser.Attr2Context,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def mptype(self):
            return self.getTypedRuleContext(D96Parser.MptypeContext,0)


        def ASS(self):
            return self.getToken(D96Parser.ASS, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attr2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr2" ):
                return visitor.visitAttr2(self)
            else:
                return visitor.visitChildren(self)




    def attr2(self):

        localctx = D96Parser.Attr2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attr2)
        try:
            self.state = 214
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.mpid()
                self.state = 203
                self.match(D96Parser.COMMA)
                self.state = 204
                self.attr2()
                self.state = 205
                self.match(D96Parser.COMMA)
                self.state = 206
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 208
                self.mpid()
                self.state = 209
                self.match(D96Parser.COLON)
                self.state = 210
                self.mptype()
                self.state = 211
                self.match(D96Parser.ASS)
                self.state = 212
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mpid(self):
            return self.getTypedRuleContext(D96Parser.MpidContext,0)


        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def list_id(self):
            return self.getTypedRuleContext(D96Parser.List_idContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_list_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_id" ):
                return visitor.visitList_id(self)
            else:
                return visitor.visitChildren(self)




    def list_id(self):

        localctx = D96Parser.List_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list_id)
        try:
            self.state = 221
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 216
                self.mpid()
                self.state = 217
                self.match(D96Parser.COMMA)
                self.state = 218
                self.list_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 220
                self.mpid()
                pass

